--- a/composer.json
+++ b/composer.json
@@ -77,5 +77,8 @@
             "allow-contrib": false,
             "require": "7.3.*"
         }
+    },
+    "require-dev": {
+        "symfony/web-profiler-bundle": "7.3.*"
     }
 }
